--- a/views/adminView/modalYesTransport.html
+++ b/views/adminView/modalYesTransport.html
@@ -37,10 +37,10 @@
             </div>
             <div class="row p-1">
               <div class="col-md-6 inputGroupContainer">
-                <div class="input-group"><input id="authName_2" placeholder="Nombre Completo" class="form-control form-control-sm" value="" type="text"></div>
+                <div class="input-group"><input id="authName" placeholder="Nombre Completo" class="form-control form-control-sm" value="" type="text"></div>
               </div>
               <div class="col-md-3 inputGroupContainer">
-                <div class="input-group"><input id="authDoc_2" placeholder="N° de Documento" class="form-control form-control-sm" value="" type="text"></div>
+                <div class="input-group"><input id="authDoc placeholder="N° de Documento" class="form-control form-control-sm" value="" type="text"></div>
               </div>
               <div class="col-md-3 inputGroupContainer">
                 <div class="input-group"><input id="authMobile" placeholder="Celular" class="form-control form-control-sm" value="" type="text"></div>
