--- a/views/adminView/modalElectronicSignature.html
+++ b/views/adminView/modalElectronicSignature.html
@@ -41,7 +41,7 @@
       </h2>
       <div id="panelsStayOpen-collapseFourd" class="accordion-collapse collapse show">
         <div class="accordion-body" id="">
-          <p class="text-justify">Si requiere asistencia en el proceso, pueden comunicarse así: 
+          <p class="text-justify">Si requiere asistencia en el proceso, puede comunicarse con las siguientes áreas:
             <ul>
               <li>Admisiones y Matrículas: 3136980168</li>
               <li>Sistemas: 3174058211.</li>
